xidlc/src/driver/tests/snapshots/xidlc__driver__tests__c_c_gen__const_binary.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
const_binary.c
===============
#include "const_binary.h"
===============
const_binary.h
===============
// Generated by idlc
#ifndef CONST_BINARY.H
#define CONST_BINARY.H
#include <stdbool.h>
#include <stdint.h>
#include <wchar.h>

static const int32_t a = 0b10;

#endif
===============
const_binary_xcdr.c
===============
#include "const_binary_xcdr.h"
===============
const_binary_xcdr.h
===============
// Generated by idlc
#ifndef CONST_BINARY_XCDR.H
#define CONST_BINARY_XCDR.H
#include <stdbool.h>
#include <stdint.h>
#include <wchar.h>

#endif
