xidlc/src/driver/tests/snapshots/xidlc__driver__tests__c_c_gen__const_dec.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
const_dec.c
===============
/* Generated by xidlc
* xidlc_version: 0.1.0
* xidlc_timestamp: 1970-01-01 00:00
*/
#include "const_dec.h"
===============
const_dec.h
===============
/* Generated by xidlc
 * xidlc_version: 0.1.0
 * xidlc_timestamp: 1970-01-01 00:00
 */

#ifndef CONST_DEC.H
#define CONST_DEC.H
#include <stdbool.h>
#include <stdint.h>
#include <wchar.h>

static const int32_t a = 10;

#endif
===============
const_dec_xcdr.c
===============
/* Generated by xidlc
* xidlc_version: 0.1.0
* xidlc_timestamp: 1970-01-01 00:00
*/
#include "const_dec_xcdr.h"
===============
const_dec_xcdr.h
===============
/* Generated by xidlc
 * xidlc_version: 0.1.0
 * xidlc_timestamp: 1970-01-01 00:00
 */

#ifndef CONST_DEC_XCDR.H
#define CONST_DEC_XCDR.H
#include <stdbool.h>
#include <stdint.h>
#include <wchar.h>

#endif
