xidlc/src/driver/tests/snapshots/xidlc__driver__tests__c_c_gen__const_hex.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
const_hex.c
===============
/* Generated by xidlc
* xidlc_version: 0.1.0
* xidlc_timestamp: 1970-01-01 00:00
*/
#include"const_hex.h"
===============
const_hex.h
===============
/* Generated by xidlc
* xidlc_version: 0.1.0
* xidlc_timestamp: 1970-01-01 00:00
*/
#ifndef CONST_HEX_H
#define CONST_HEX_H
#include<stdbool.h>
#include<stdint.h>
#include<wchar.h>

static const int32_t a = 0xff;
#endif
===============
const_hex_xcdr.c
===============
/* Generated by xidlc
* xidlc_version: 0.1.0
* xidlc_timestamp: 1970-01-01 00:00
*/
#include"const_hex_xcdr.h"
===============
const_hex_xcdr.h
===============
/* Generated by xidlc
* xidlc_version: 0.1.0
* xidlc_timestamp: 1970-01-01 00:00
*/
#ifndef CONST_HEX_XCDR_H
#define CONST_HEX_XCDR_H
#include<stdbool.h>
#include<stdint.h>
#include<wchar.h>

#endif
