xidlc/src/driver/tests/snapshots/xidlc__driver__tests__c_c_gen__const_oct.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
const_oct.c
===============
/// Generated by xidlc 0.1.0 at 1970-01-01 00:00.
#include"const_oct.h"
===============
const_oct.h
===============
/// Generated by xidlc 0.1.0 at 1970-01-01 00:00.
#ifndef CONST_OCT_H
#define CONST_OCT_H
#include<stdbool.h>
#include<stdint.h>
#include<wchar.h>

static const int32_t a = 0 o10;
#endif
===============
const_oct_xcdr.c
===============
/// Generated by xidlc 0.1.0 at 1970-01-01 00:00.
#include"const_oct_xcdr.h"
===============
const_oct_xcdr.h
===============
/// Generated by xidlc 0.1.0 at 1970-01-01 00:00.
#ifndef CONST_OCT_XCDR_H
#define CONST_OCT_XCDR_H
#include<stdbool.h>
#include<stdint.h>
#include<wchar.h>

#endif
