xidlc/src/driver/tests/snapshots/xidlc__driver__tests__c_c_gen__enum_empty.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
enum_empty.c
===============
/// Generated by xidlc 0.1.0 at 1970-01-01 00:00.
#include"enum_empty.h"

A A_new(void){
    A value;
    A_init(&value);
    return value;
}

void A_init(A * self){
    * self = (A)0;
}
===============
enum_empty.h
===============
/// Generated by xidlc 0.1.0 at 1970-01-01 00:00.
#ifndef ENUM_EMPTY_H
#define ENUM_EMPTY_H
#include<stdbool.h>
#include<stdint.h>
#include<wchar.h>

typedef enum A{
}A;
A A_new(void);
void A_init(A * self);
#endif
===============
enum_empty_xcdr.c
===============
/// Generated by xidlc 0.1.0 at 1970-01-01 00:00.
#include"enum_empty_xcdr.h"

XcdrBufferResult A_serialize(A const * self, XcdrBuffer buf){
    uint8_t * ptr = buf.ptr;
    size_t len = buf.len;
    FfiCdrSerializer serializer = cdr_serializer_new(ptr, len);
    XcdrFfiError err = Ok;
    err = cdr_serializer_write_i32(&serializer, "(*self)");
    if(err != Ok){
        return(XcdrBufferResult){
            err, cdr_serializer_position(&serializer)
        };
    }

    return(XcdrBufferResult){
        Ok, cdr_serializer_position(&serializer)
    };
}

XcdrBufferResult A_deserialize(A * self, XcdrConstBuffer buf){
    const uint8_t * ptr = buf.ptr;
    size_t len = buf.len;
    FfiCdrDeserializer deserializer = cdr_deserializer_new(ptr, len);
    XcdrFfiError err = Ok;
    err = cdr_deserializer_read_i32_le(&deserializer, "(*self)");
    if(err != Ok){
        return(XcdrBufferResult){
            err, cdr_deserializer_position(&deserializer)
        };
    }

    return(XcdrBufferResult){
        Ok, cdr_deserializer_position(&deserializer)
    };
}
===============
enum_empty_xcdr.h
===============
/// Generated by xidlc 0.1.0 at 1970-01-01 00:00.
#ifndef ENUM_EMPTY_XCDR_H
#define ENUM_EMPTY_XCDR_H
#include<stdbool.h>
#include<stdint.h>
#include<wchar.h>

XcdrBufferResult A_serialize(A const * self, XcdrBuffer buf);
XcdrBufferResult A_deserialize(A * self, XcdrConstBuffer buf);
#endif
