xidlc/src/driver/tests/snapshots/xidlc__driver__tests__c_c_gen__enum_simple_comma.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
enum_simple_comma.c
===============
#include "enum_simple_comma.h"
A A_new(void) {
  A value;
  A_init(&value);
  return value;
}

void A_init(A* self) {
  *self = (A)0;
}
===============
enum_simple_comma.h
===============
// Generated by idlc
#pragma once
#include <stdbool.h>
#include <stdint.h>
#include <wchar.h>
typedef enum A {

  B,

  C,

} A;

A A_new(void);
void A_init(A* self);
===============
enum_simple_comma_xcdr.c
===============
#include "enum_simple_comma_xcdr.h"
XcdrBufferResult A_serialize(A const* self, XcdrBuffer buf) {
  uint8_t *ptr = buf.ptr;
  size_t len = buf.len;
  FfiCdrSerializer serializer = cdr_serializer_new(ptr, len);
  XcdrFfiError err = Ok;
  
  
  
  
  
  err = cdr_serializer_write_i32(&serializer, "(*self)");
  if (err != Ok) {
    return (XcdrBufferResult){ err, cdr_serializer_position(&serializer) };
  }
  
  
  
  
  return (XcdrBufferResult){ Ok, cdr_serializer_position(&serializer) };
}

XcdrBufferResult A_deserialize(A* self, XcdrConstBuffer buf) {
  const uint8_t *ptr = buf.ptr;
  size_t len = buf.len;
  FfiCdrDeserializer deserializer = cdr_deserializer_new(ptr, len);
  XcdrFfiError err = Ok;
  
  
  
  
  
  err = cdr_deserializer_read_i32_le(&deserializer, "(*self)");
  if (err != Ok) {
    return (XcdrBufferResult){ err, cdr_deserializer_position(&deserializer) };
  }
  
  
  
  
  return (XcdrBufferResult){ Ok, cdr_deserializer_position(&deserializer) };
}
===============
enum_simple_comma_xcdr.h
===============
// Generated by idlc
#pragma once
#include "enum_simple_comma.h"
#include "xidl_xcdr.h"
#include <stddef.h>
XcdrBufferResult A_serialize(A const* self, XcdrBuffer buf);
XcdrBufferResult A_deserialize(A* self, XcdrConstBuffer buf);
