xidlc/src/driver/tests/snapshots/xidlc__driver__tests__c_c_gen__except_dcl.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
except_dcl.c
===============
/// Generated by xidlc 0.1.0 at 1970-01-01 00:00.
#include"except_dcl.h"
===============
except_dcl.h
===============
/// Generated by xidlc 0.1.0 at 1970-01-01 00:00.
#ifndef EXCEPT_DCL_H
#define EXCEPT_DCL_H
#include<stdbool.h>
#include<stdint.h>
#include<wchar.h>

#endif
===============
except_dcl_xcdr.c
===============
/// Generated by xidlc 0.1.0 at 1970-01-01 00:00.
#include"except_dcl_xcdr.h"
===============
except_dcl_xcdr.h
===============
/// Generated by xidlc 0.1.0 at 1970-01-01 00:00.
#ifndef EXCEPT_DCL_XCDR_H
#define EXCEPT_DCL_XCDR_H
#include<stdbool.h>
#include<stdint.h>
#include<wchar.h>

#endif
