xidlc/src/driver/tests/snapshots/xidlc__driver__tests__c_c_gen__module_dcl.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
module_dcl.c
===============
/* Generated by xidlc
* xidlc_version: 0.1.0
* xidlc_timestamp: 1970-01-01 00:00
*/
#include "module_dcl.h"
===============
module_dcl.h
===============
/* Generated by xidlc
 * xidlc_version: 0.1.0
 * xidlc_timestamp: 1970-01-01 00:00
 */

#ifndef MODULE_DCL.H
#define MODULE_DCL.H
#include <stdbool.h>
#include <stdint.h>
#include <wchar.h>

static const u8 a = 10;

/* struct B forward skipped */

#endif
===============
module_dcl_xcdr.c
===============
/* Generated by xidlc
* xidlc_version: 0.1.0
* xidlc_timestamp: 1970-01-01 00:00
*/
#include "module_dcl_xcdr.h"
===============
module_dcl_xcdr.h
===============
/* Generated by xidlc
 * xidlc_version: 0.1.0
 * xidlc_timestamp: 1970-01-01 00:00
 */

#ifndef MODULE_DCL_XCDR.H
#define MODULE_DCL_XCDR.H
#include <stdbool.h>
#include <stdint.h>
#include <wchar.h>

#endif
